submit ready - final modifications

--- a/pa3_2/VirtualMemoryManager/makefile
+++ b/pa3_2/VirtualMemoryManager/makefile
@@ -4,7 +4,7 @@ CFLAGS= -Wno-write-strings
 
 all:
 	$(CC) -c -pthread -Wall zlog.c -o zlog.obj
-	$(CC) $(CFLAGS) main.cpp -pthread -o vmm zlog.obj
+	$(CC) $(CFLAGS) main.cpp -pthread -o a.out zlog.obj
 
 Debug:
 	all
@@ -13,7 +13,7 @@ Release:
 	all
 
 clean:
-	rm vmm
+	rm a.out
 	rm zlog.obj
 
 
